--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ dependencies {
             'com.codeborne:selenide:6.16.0',
             'org.junit.jupiter:junit-jupiter:5.9.3'
     )
+    dependencies {
+        implementation 'com.github.javafaker:javafaker:1.0.2'
+    }
 }
 
 test {
